fix gap on mobile

--- a/styleguide/source/assets/scss/03-organisms/_page-banner.scss
+++ b/styleguide/source/assets/scss/03-organisms/_page-banner.scss
@@ -138,6 +138,8 @@ $page-banner-height: 330px;
     max-width: 640px;
     position: relative;
       top: calc(#{$page-banner-height}/2);
+      left: 20px;
+      margin-left: -20px;
 
     @media ($bp-medium-min) {
       height: 100%;
